deleted:    dist/assets/1-BshZ7giR.png 	deleted:    dist/assets/2-BH6XZgIR.png 	deleted:    dist/assets/3-BlqbO5CX.png 	deleted:    dist/assets/4-DgLGLM9M.png 	deleted:    dist/assets/InterVariable-CWi-zmRD.woff2 	deleted:    dist/assets/InterVariable-Italic-d6KXgdvN.woff2 	deleted:    dist/assets/index-BvdEnIUa.js 	deleted:    dist/assets/index-BvdEnIUa.js.map 	deleted:    dist/assets/index-oYcKEeZL.css 	deleted:    dist/assets/kinetika-regular-CYzJPfbp.ttf 	deleted:    dist/index.html 	modified:   package.json 	new file:   src/catalog/details.tsx 	modified:   src/catalog/index.tsx 	modified:   src/catalog/item/center.tsx 	modified:   src/catalog/item/description.tsx 	new file:   src/catalog/item/index.tsx 	modified:   src/catalog/item/top.tsx 	modified:   src/component/table.tsx 	new file:   src/header/app-bar.tsx 	new file:   src/header/breadcrumbs.tsx 	new file:   src/header/icons.tsx 	new file:   src/header/logo.tsx 	modified:   src/index.tsx 	deleted:    src/shared/head.tsx 	new file:   src/shared/header.tsx 	modified:   src/styles/index.css 	modified:   src/theme.ts 	modified:   vite.config.js

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "ISC",
   "main": "index.js",
   "scripts": {
-    "dev": "vite src --port=3001",
-    "build": "vite build src --outDir=../dist --watch --sourcemap",
+    "dev": "vite",
+    "build": "vite build --sourcemap",
     "start": "next start",
     "nextDev": "npx open-cli http://localhost:3000 & next dev"
   },
@@ -38,6 +38,7 @@
     "react-router-dom": "7.3.0",
     "storybook": "^8.6.8",
     "styled-components": "^6.1.15",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "@vitejs/plugin-react": "^4.3.4"
   }
 }
