--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nextDev": "npx open-cli http://localhost:3000 & next dev"
   },
   "dependencies": {
+    "@hookstate/core": "^4.0.2",
     "axios": "^1.7.9",
     "critters": "^0.0.25",
     "dotenv": "^16.4.2",
@@ -27,6 +28,7 @@
     "@mui/x-data-grid": "^7.27.3",
     "@mui/x-date-pickers": "^7.27.3",
     "@types/react": "19.0.12",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.5.0",
     "postcss": "^8.5.3",
@@ -38,7 +40,6 @@
     "react-router-dom": "7.3.0",
     "storybook": "^8.6.8",
     "styled-components": "^6.1.15",
-    "vite": "^5.4.10",
-    "@vitejs/plugin-react": "^4.3.4"
+    "vite": "^5.4.10"
   }
 }
