--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "critters": "^0.0.25",
     "dotenv": "^16.4.2",
     "express": "^4.21.1",
-    "next": "^15.2.3"
+    "next": "^15.2.3",
+    "quick.db": "^9.1.7"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
@@ -41,6 +42,7 @@
     "react-router-dom": "7.3.0",
     "storybook": "^8.6.8",
     "styled-components": "^6.1.15",
+    "typescript": "5.8.2",
     "vite": "^5.4.10"
   }
 }
