--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "nextDev": "npx open-cli http://localhost:3000 & next dev"
   },
   "dependencies": {
+    "@craftjs/core": "^0.2.12",
     "@hookstate/core": "^4.0.2",
     "axios": "^1.7.9",
     "critters": "^0.0.25",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.2",
     "express": "^4.21.1",
+    "grapesjs": "^0.22.6",
     "next": "^15.2.3",
-    "quick.db": "^9.1.7"
+    "quick.db": "^9.1.7",
+    "react-contenteditable": "^3.3.7"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
