modified:   package.json

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "license": "ISC",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build --sourcemap",
-    "preview": "vite preview",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "nextDev": "npx open-cli http://localhost:3000 & next dev"
   },
