modified:   package.json

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mui/material": "^6.4.7",
     "@mui/x-data-grid": "^7.27.3",
     "@mui/x-date-pickers": "^7.27.3",
+    "@types/node": "^22.14.0",
     "@types/react": "19.0.12",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
