new file:   app/api/socket/route.ts 	deleted:    app/api/test.ts 	new file:   app/engine/SocketContext.tsx 	new file:   app/engine/global-state.ts 	modified:   app/layout.tsx 	modified:   package.json 	renamed:    app/dynamic.css -> public/styles/dynamic.css 	renamed:    app/global.css -> public/styles/global.css 	modified:   readme.md 	modified:   tsconfig.json 	new file:   types/next.d.ts 	new file:   types/state.d.ts

--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.2",
     "express": "^4.21.1",
-    "grapesjs": "^0.22.6",
     "next": "^15.2.3",
     "quick.db": "^9.1.7",
-    "react-contenteditable": "^3.3.7"
+    "react-contenteditable": "^3.3.7",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
@@ -32,8 +33,10 @@
     "@mui/material": "^6.4.7",
     "@mui/x-data-grid": "^7.27.3",
     "@mui/x-date-pickers": "^7.27.3",
+    "@types/next": "^8.0.7",
     "@types/node": "^22.14.0",
     "@types/react": "19.0.12",
+    "@types/socket.io": "^3.0.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.5.0",
