--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
+    "typeRoots": ["node_modules/@types", "types"],
     "lib": [
       "dom",
       "dom.iterable",
@@ -25,6 +26,7 @@
     "strictNullChecks": true
   },
   "include": [
+    "types/**/*.d.ts",
     "**/*.ts",
     "**/*.tsx",
     "next-env.d.ts",
